# CMake_examples

./: README.md
GLOB_example/: CMakeLists.txt
add_custom_example/: CMakeLists.txt
hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.h.in
hello_world_lib/: CMakeLists.txt  hello_world_conf.h.in  main.cc
hello_world_lib/hello_world/: CMakeLists.txt  hello_world.cpp  hello_world.h
